--- a/index.html
+++ b/index.html
@@ -41,26 +41,26 @@
 		<div class="header__slider">
 			<div class="header__bg header__bg-1">
 				<div class="header__big">
-					<h1 class="header__title">
-						<p>МЫСЛИ</p>
+					<div class="header__title">
+						<p></p>МЫСЛИ</p>
 						<p>ГЛОБАЛЬНО</p>
-					</h1>
-					<h2 class="header__subtitle">
+					</div>
+					<div class="header__subtitle">
 						Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении
-					</h2>
+					</div>
 					<hr class="header__hr">
 					<a href="#" class="header__link transition-scale">ПОДРОБНЕЕ</a>
 				</div>
 			</div>
 			<div class="header__bg header__bg-2">
 				<div class="header__big">
-					<h1 class="header__title">
+					<div class="header__title">
 						<p>МЫСЛИ</p>
 						<p>ГЛОБАЛЬНО</p>
-					</h1>
-					<h2 class="header__subtitle">
+					</div>
+					<div class="header__subtitle">
 						Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении
-					</h2>
+					</div>
 					<hr class="header__hr">
 
 					<a href="#" class="header__link transition-scale">ПОДРОБНЕЕ</a>
@@ -68,13 +68,13 @@
 			</div>
 			<div class="header__bg header__bg-3">
 				<div class="header__big">
-					<h1 class="header__title">
+					<div class="header__title">
 						<p>МЫСЛИ</p>
 						<p>ГЛОБАЛЬНО</p>
-					</h1>
-					<h2 class="header__subtitle">
+					</div>
+					<div class="header__subtitle">
 						Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении
-					</h2>
+					</div>
 					<hr class="header__hr">
 
 					<a href="#" class="header__link transition-scale">ПОДРОБНЕЕ</a>
@@ -303,7 +303,6 @@
 						<a href="#" class="news__info"><img src="images/svg/info_white.svg" alt="info"></a>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</section>
@@ -313,19 +312,19 @@
 			<div class="quotes__slider">
 				<div class="quotes-slider__item">
 					<i class="fas fa-quote-right quote__icon"></i>
-					<div class="quotes-slider__text"> Если нужно создавать либо повышать имидж компании,
-						то <span class="strong-blue">диджитал-маркетинг</span> является наиболее подходящим. </div>
+					<h3 class="quotes-slider__text"> Если нужно создавать либо повышать имидж компании,
+						то <span class="strong-blue">диджитал-маркетинг</span> является наиболее подходящим. </h3>
 					<div class="qutes-slider__author">- Маргарита Акулич</div>
 				</div>
 				<div class="quotes-slider__item">
 					<i class="fas fa-quote-right quote__icon"></i>
-					<div class="quotes-slider__text"> Быть нейтральным — не значит быть равнодушным и бесчувственным. Не надо убивать в себе чувства.
-						Достаточно убить в себе <span class="strong-blue">ненависть</span>. </div>
+					<h3 class="quotes-slider__text"> Быть нейтральным — не значит быть равнодушным и бесчувственным. Не надо убивать в себе чувства.
+						Достаточно убить в себе <span class="strong-blue">ненависть</span>. </h3>
 					<div class="qutes-slider__author">- Геральт из Ривии</div>
 				</div>
 				<div class="quotes-slider__item">
 					<i class="fas fa-quote-right quote__icon"></i>
-					<div class="quotes-slider__text"> Каждому нужен <span class="strong-blue">тренер</span>. Неважно, кто вы – баскетболист, теннисист, гимнаст или игрок в бридж. </div>
+					<h3 class="quotes-slider__text"> Каждому нужен <span class="strong-blue">тренер</span>. Неважно, кто вы – баскетболист, теннисист, гимнаст или игрок в бридж. </h3>
 					<div class="qutes-slider__author">- Билл Гейтс</div>
 				</div>
 			</div>
