--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="header__bg header__bg-1">
 				<div class="header__big">
 					<div class="header__title">
-						<p></p>МЫСЛИ</p>
+						<p>МЫСЛИ</p>
 						<p>ГЛОБАЛЬНО</p>
 					</div>
 					<div class="header__subtitle">
