--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta property="og:description" content="Мы - агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении."/>
 	<meta property="og:site_name" content="Лендинг диджитал агенства DiGi."/>
 	<title>Di Gi digital agency</title>
-	<link rel="shortcut icon" href="/images/footer_logo.png" type="image/png">
+	<link rel="shortcut icon" href="images/footer_logo.png" type="image/png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
