--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta property="og:title" content="Di Gі - Мы предоставляем комплексный подход к продвижению компании, продуктов и услуг в цифровой сфере. "/>
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://zlyuka14.github.io/di-gi/" />
+	<meta property="og:image" content="https://zlyuka14.github.io/di-gi/images/bg1.jpg"/>
+	<meta property="og:image:width" content="1200"/>
+	<meta property="og:image:height" content="630"/>
+	<meta property="og:image:alt" content="Сайт агенства DiGi."/>
+	<meta property="og:description" content="Мы - агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении."/>
+	<meta property="og:site_name" content="Лендинг диджитал агенства DiGi."/>
 	<title>Di Gi digital agency</title>
 	<link rel="shortcut icon" href="images/footer_logo.png" type="image/png">
 	<link rel="stylesheet" href="css/reset.css">
