--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta property="og:title" content="Di Gі - Мы предоставляем комплексный подход к продвижению компании, продуктов и услуг в цифровой сфере. "/>
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://zlyuka14.github.io/di-gi/" />
+	<meta property="og:url" content="https://zlyuka14.github.io/di-gi/index.html" />
 	<meta property="og:image" content="https://zlyuka14.github.io/di-gi/images/bg1.jpg"/>
 	<meta property="og:image:width" content="1200"/>
 	<meta property="og:image:height" content="630"/>
