--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta property="og:title" content="Di Gі - Мы предоставляем комплексный подход к продвижению компании, продуктов и услуг в цифровой сфере. "/>
+	<meta property="og:title" content="Мы предоставляем комплексный подход к продвижению компании, продуктов и услуг в цифровой сфере"/>
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://zlyuka14.github.io/di-gi/index.html" />
 	<meta property="og:image" content="https://zlyuka14.github.io/di-gi/images/bg1.jpg"/>
